--- a/prometheus/conf/prometheus.yml
+++ b/prometheus/conf/prometheus.yml
@@ -19,7 +19,9 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-
+  - job_name: 'polkadot'
+    static_configs:
+      - targets: ['localhost:9615']
   - job_name: 'dockerd-exporter'
     dns_sd_configs:
     - names:
@@ -40,12 +42,8 @@ scrape_configs:
       - 'tasks.node-exporter'
       type: 'A'
       port: 9100
-  - job_name: 'polkadot'
-    dns_sd_configs:
-    - names:
-      - 'tasks.'polkadot'
-      type: 'A'
-      port: 9615
+
+   
 
 
 
