--- a/prometheus/conf/prometheus.yml
+++ b/prometheus/conf/prometheus.yml
@@ -19,7 +19,7 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-  - job_name: 'polkadot'
+  - job_name: 'substrate_node'
     static_configs:
       - targets: ['localhost:9615']
   - job_name: 'dockerd-exporter'
