--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,8 +131,8 @@ services:
     networks:
       - net
     environment:
-      - "POLKADOT_URIS=default:http://polkadot:9615"
-    command: --validator --name=Raya02 --pruning=archive --wasm-execution Compiled --chain kusama
+      - "POLKADOT_URIS=default:http://polkadot:9944"
+    command: --validator --name=Raya02 --pruning=archive --wasm-execution Compiled --chain kusama --prometheus-external
     
     volumes:
       - polkadot:/data 
@@ -166,7 +166,7 @@ services:
           memory: 64M
 
   prometheus:
-    image: stefanprodan/swarmprom-prometheus:v2.5.0
+    image: baselm/rayav1
     networks:
       - net
     command:
