--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,12 @@
+:9615 {
+    proxy / polkadot:9615 {
+            transparent
+        }
+
+    errors stderr
+    tls off
+}
+
 :9090 {
     basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
     proxy / prometheus:9090 {
