--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,8 +131,8 @@ services:
     networks:
       - net
     environment:
-      - "POLKADOT_URIS=default:http://polkadot:9944"
-    command: --validator --name=Raya02 --pruning=archive --wasm-execution Compiled --chain kusama --prometheus-external
+      - "POLKADOT_URIS=default:http://polkadot:9615"
+    command: --validator --name=Testing --pruning=archive --wasm-execution Compiled --chain kusama --prometheus-external --prometheus-port 9615
     
     volumes:
       - polkadot:/data 
@@ -166,7 +166,7 @@ services:
           memory: 64M
 
   prometheus:
-    image: baselm/rayav1
+    image: baselm/promo
     networks:
       - net
     command:
