--- a/prometheus/conf/prometheus.yml
+++ b/prometheus/conf/prometheus.yml
@@ -23,7 +23,8 @@ scrape_configs:
   - job_name: 'polkadot'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9615']
+      - targets: ['polkadot:9615']
+      
   - job_name: 'dockerd-exporter'
     dns_sd_configs:
     - names:
